2018-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8-large/Makefile.in,
	  device/lib/stm8-large/_fast_long_neg.s:
	  Remove ununsed support routine.

2018-03-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/collate-results.py,
	* support/regression/compact-results.py,
	* support/regression/get_ticks.py: Accept non-UTF-8 regression test
	  output without throwing an exception under Python 3

2018-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fixes for handling of immediate operands for large memory model.
	* device/include/setjmp.h,
	  device/lib/stm8-large/setjmp.s:
	  Fix setjmp() / longjmp() for large memory model.

2018-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/port.h,
	  src/*/main.c,
	  src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/SDCCsymt.c:
	  Handle function pointer sizes separately from object pointer sizes.
	* configure.ac,
	  device/lib/Makefile.in,
	  src/stm8/gen.c,
	  device/lib/stm8-large:
	  stm8-large library.
	* support/regression/Makefile.in,
	  support/regression/ports/stm8-large:
	  stm8-large regression test target.

2018-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/port.h,
	  src/SDCCglobl.h,
	  src/SDCCast.c,
	  src/SDCCdwarf2.c,
	  src/SDCCglue.c,
	  src/SDCCicode.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/ds390/gen.c,
	  src/ds390/main.c,
	  src/ds390/ralloc.c,
	  src/hc08/gen.c,
	  src/mcs51/gen.c,
	  src/mcs51/main.c,
	  src/mcs51/ralloc.c,
	  src/pic14/gen.c,
	  src/pic16/gen.c:
	  Rename pointer size macros for clarification.
	* src/stm8/main.c,
	  src/stm8/gen.c:
	  Simplify call overhead handling for large memory model.

2018-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/longlong.c:
	  Disable test for mcs51 medium model.
	* support/regression/tests/bool.c:
	  Test assignments between bool bitfields.

2018-03-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c,