@@ -3,6 +3,9 @@
 	* device/lib/stm8-large/Makefile.in,
 	  device/lib/stm8-large/_fast_long_neg.s:
 	  Remove ununsed support routine.
+	* src/port.h,
+	  src/stm8/main.c:
+	  Fix library path for large memory model.
 
 2018-03-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
